--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@ h2 {
 }
 h1, h2 {
   font-family: "Markazi Text";
+  margin: 0;
 }
-p, button, label, input {
+p, button, label, input, li, span {
   font-family: "Karla";
 }
 
@@ -43,6 +44,25 @@ nav {
 a {
   font-family: "Karla";
   font-weight: bold;
+}
+
+#about {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2vw 0 2vw;
+}
+#about h1 {
+  color: #F4CE14;
+}
+#about h2, #about p {
+  color: black;
+}
+#about img {
+  width: 25vw;
+  height: 25vw;
+  margin: 2vw 2vw 2vw 2vw;
+  object-fit: cover;
+  border-radius: 16px;
 }
 
 /* Hero */
@@ -82,6 +102,29 @@ a {
   width: 50%;
 }
 
+#highlights {
+  padding: 0 2vw 0 2vw;
+}
+.card {
+  padding: 0 0 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 16px;
+  background-color: #EDEFEE;
+  -webkit-box-shadow: 5px 5px 5px 0 rgba(51,51,51,0.37);
+  -moz-box-shadow: 5px 5px 5px 0 rgba(51,51,51,0.37);
+  box-shadow: 5px 5px 5px 0 rgba(51,51,51,0.37);
+}
+.card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+/* Styling for Footer */
 footer {
   display: flex;
   justify-content: space-between;
